--- a/index.html
+++ b/index.html
@@ -173,76 +173,14 @@
 	</div>
 
 	<div class="row services-row">
-		<div class="large-4 columns">
+		<div class="large-12 columns">
 			<div class="service text-center">
-				<i class="typcn typcn-beaker"></i>
-				<h5>CLEAN STYLE</h5>
-				<div class="hr large-3 small-3"></div>
-				<p>
+			<p>
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute.
 				</p>
 			</div>
 		</div>
 
-		<div class="large-4 columns">
-			<div class="service text-center">
-				<i class="typcn typcn-lightbulb"></i>
-				<h5>SWEET ICONS</h5>
-				<div class="hr large-3 small-3"></div>
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute.
-				</p>
-			</div>
-		</div>
-
-		<div class="large-4 columns">
-			<div class="service text-center">
-				<i class="typcn typcn-brush"></i>
-				<h5>RETINA READY</h5>
-				<div class="hr large-3 small-3"></div>
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute.
-				</p>
-			</div>
-		</div>
-
-	</div>
-
-	<div class="row services-row">
-		<div class="large-4 columns">
-			<div class="service text-center">
-				<i class="typcn typcn-support"></i>
-				<h5>GREAT SUPPORT</h5>
-				<div class="hr large-3 small-3"></div>
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute.
-				</p>
-			</div>
-		</div>
-
-		<div class="large-4 columns">
-			<div class="service text-center">
-				<i class="typcn typcn-beer"></i>
-				<h5>FROTHY CHOPS</h5>
-				<div class="hr large-3 small-3"></div>
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute.
-				</p>
-			</div>
-		</div>
-
-		<div class="large-4 columns">
-			<div class="service text-center">
-				<i class="typcn typcn-eye-outline"></i>
-				<h5>WICKED PROJECTS</h5>
-				<div class="hr large-3 small-3"></div>
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute.
-				</p>
-			</div>
-		</div>
-
-	</div>
 
 </section>
 
@@ -281,10 +219,7 @@
 	<div class="row">
 		<div class="large-12 columns text-center">
 			<div class="page-header pad-bottom">
-				<div class="box-heading">
-					CHECK THIS OUT
-				</div>
-				<h1>OUR WORK</h1>
+					<h1>PHOTOS</h1>
 				<div class="hr large-1 small-3"></div>
 			</div>
 		</div>
