--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<div class="large-4 columns">
 			<ul class="navigation hide-for-small">
 				<li><a class="scroll" href="#photos-nav">PHOTOS</a></li>
-				<li><a class="scroll" href="#contact-nav">CONTACT</a></li>
+				<li><a class="scroll" href="#contact-nav">RSVP</a></li>
 			</ul>
 		</div>
 
@@ -51,7 +51,7 @@
 				<li><a class="scroll" href="#story-nav">OUR STORY</a></li>
 				<li><a class="scroll" href="#info-nav">INFORMATION</a></li>
 				<li><a class="scroll" href="#photos-nav">PHOTOS</a></li>
-				<li><a class="scroll" href="#contact-nav">CONTACT</a></li>
+				<li><a class="scroll" href="#contact-nav">RSVP</a></li>
 			</ul>
 		</div>
 	</div>
@@ -286,17 +286,12 @@
 <a id="contact-nav"></a>
 <section id="contact">
 
-	<iframe src="https://maps.google.com.au/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=national+park&amp;aq=&amp;sll=-34.535056,138.949971&amp;sspn=0.016209,0.019248&amp;ie=UTF8&amp;hq=&amp;hnear=National+Park+Tasmania&amp;ll=-42.681257,146.729311&amp;spn=0.028924,0.038495&amp;t=m&amp;z=14&amp;iwloc=&amp;output=embed"></iframe>
-	<div id="map-toggle" class="btn-wrapper"><div class="btn"><i class="typcn typcn-map"></i>TOGGLE MAP</div></div>
 
 	<div id="contact-holder">
 		<div class="row">
 			<div class="large-12 columns text-center">
 				<div class="page-header pad-bottom">
-					<div class="box-heading">
-						GET IN TOUCH
-					</div>
-					<h1>CONTACT US</h1>
+						<h1>RSVP</h1>
 					<div class="hr large-1 small-3"></div>
 				</div>
 			</div>
