--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 
 		<div class="row">
 			<div class="large-5 columns">
-				<p>
+				<p style="color:#ffffff;">
 					At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores.
 				</p>
 				<ul id="contact-details">
