--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 		<div class="row">
 			<div class="large-12 columns text-center">
 				<div class="page-header pad-bottom">
-						<h1>RSVP</h1>
+						<h1 style="color:#ffffff;">RSVP</h1>
 					<div class="hr large-1 small-3"></div>
 				</div>
 			</div>
