--- a/index.html
+++ b/index.html
@@ -343,13 +343,7 @@
 			<div class="large-12 columns text-center">
 				<div id="footer">
 					<div class="hr large-1 small-3"></div>
-					<ul id="footer-social">
-						<li><a href="#"><i class="typcn typcn-social-twitter-circular"></i></a></li>
-						<li><a href="#"><i class="typcn typcn-social-facebook-circular"></i></a></li>
-						<li><a href="#"><i class="typcn typcn-social-dribbble-circular"></i></a></li>
-						<li><a href="#"><i class="typcn typcn-social-vimeo-circular"></i></a></li>
-					</ul>
-					<div id="copy-text">&copy;&nbsp;&nbsp;<span class="logo-text">BAROSSA</span>&nbsp;&nbsp;2013</div>
+					<div id="copy-text">&copy;&nbsp;&nbsp;<span class="logo-text">RONNIE &amp; DANNIE</span>&nbsp;&nbsp;2014</div>
 				</div>
 			</div>
 		</div>
