site-wide changes

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 		</div>
 
 		<div class="large-3 columns store text-center">
-			<img alt="store image" src="img/paypal.png" class="fade"/>
+			<img alt="store image" src="img/surlatable.png" class="fade"/>
 		</div>
 
 	</div>
@@ -323,7 +323,7 @@
 			<div class="large-12 columns text-center">
 				<div id="footer">
 					<div class="hr large-1 small-3"></div>
-					<div id="copy-text">&copy;&nbsp;&nbsp;<span class="logo-text">RONNIE &amp; DANNIE</span>&nbsp;&nbsp;2014</div>
+					<div id="copy-text"><span class="logo-text"> &copy;&nbsp;RONNIE &amp; DANNIE &nbsp;2014</span></div>
 				</div>
 			</div>
 		</div>
