--- a/index.html
+++ b/index.html
@@ -161,14 +161,21 @@
 		</div>
 	</div>
 
-	<div class="row services-row">
+	<div class="row">
 		<div class="large-12 columns">
+				<b><div class="box">WHEN &amp; WHERE</div></b><br><br>
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute.
-				</p>
-			</div>
+				April 19, 2014<br>
+				<a href="https://maps.google.com/maps?ie=UTF-8&q=gleneagles+country+club&fb=1&gl=us&hq=gleneagles+country+club&hnear=0x864c21da13c59513:0x62aa036489cd602b,Plano,+TX&cid=0,0,7775291139324462185&ei=7-t-UuiZIMiorAH9oICQCA&ved=0CDUQrwswAA" target="_blank">Glen Eagles Country Club</a><br>
+				5401 W Park Blvd<br>
+				Plano, TX 75093
+
+			</p>
 		</div>
 
+
+
+	</div>
 
 </section>
 
