our story and photos added

--- a/index.html
+++ b/index.html
@@ -80,9 +80,17 @@
 	<div class="row">
 		<div class="large-12 columns">
 			<p id="about-text">
-				A lot of stories these days seem to start the same. Guy meets girl, guy likes girl, guy dates girl. This is where our story breaks the mold. On a cold day in February, we met for the second time at a Texas Tornado hockey game.
+				A lot of love stories seem to start off the same these days. Guy meets girl, guy likes girl, guy eventually date girl and they live happily ever after. These stories are nice to read, but are drastically different than our story.<br><br>
 
-				Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+				We met, for the second time, on a cold day in January. It was at a Texas Tornado hockey game with the young adults from Freedom Life Church. I mention that this was our second time meeting because, despite having gone to the same church for about 3 months, we never talked once. Heck, one of her friends even asked her if she thought I was cute and her response was something to the effect of “No way.” What’s even funnier is that I was completely oblivious to her all together. God had a different plan for us. But I digress.<br><br>
+
+				After the usual hello’s to some friends I hadn’t seen in a while, I saw her. She casually walked up with her beanie and moccasins, smiled a little and said “Hi!” I clearly remember thinking, “Wow. Is that Dannie?” She was by far the cutest girl within a 100 mile radius. There wasn’t anything particularly exciting about that night except for when I decided to join her and a few friends to get a hot dog and soda that came with our ticket.<br>This is where the story gets good, so keep reading. We head to the concession stand to claim our food with some small chatter on the way and I move aside to let the ladies go first. As soon as I get up to the counter, the lady decides to drag her feet and really take her time. Being mindful that everyone else had already got their food and were now waiting on me, I began to get a little impatient with the girl.<br><br>
+
+				After what seemed like a 2 hour wait, although I’m pretty sure it was like 3 minutes tops, I finally got my hot dog and soda combination. Worried that everyone was now waiting on me, I rushed to the condiment stand to quickly get a few pumps of mustard and start walking back towards our seats. I turned around to find Dannie waiting patiently for me with a smile on her face. You might think it’s crazy, and trust me, at times so do I, but it was almost as if thats the second I knew that this was the girl I wanted to marry.<br><br>
+
+				A few more weeks had passed by and I couldn’t get her, or the hot dog incident, out of my head. I didn’t know how, or when I was going to see her again since I was now attending Watermark full time. Distressed and somewhat disappointed in myself for not asking her for her number that night, I started praying. At this point, The Porch, Watermark’s young adult ministry, had started back up again for the new year. I remember one night specifically going with all the heaviness on my heart and just wanting to hear from God. For the first time in my entire life, I prayed a simple, yet completely authentic prayer to God. I said, “God, I’m tired of chasing after everything but You. Help me to seek You more, and that in that process, You would show me the woman that You have for me.”<br><br>
+
+				Feeling much better about things, but also not really expecting anything out of the blue to happen, I started to head out to my car. As I’m walking back to my car, I was side tracked by a friend of mine and stopped to say hi. As we’re talking, believe it or not, amidst the sea of people and faces, I saw her. Dannie had gone to The Porch that night with a friend of hers. I couldn’t believe that she was standing right in front of me after I had just prayed that prayer.  Keep in mind that there are on average about 2,000 people that show up to The Porch every Tuesday night. I was floored. That night, I knew she was the one. She was girl I was going to marry.
 			</p>
 		</div>
 	</div>
@@ -197,11 +205,11 @@
 		</div>
 
 		<div class="large-3 columns store text-center">
-			<a href="http://www.amazon.com/gp/wedding/homepage"><img alt="store image" src="img/amazon.png" class="fade"/></a>
+			<a href="https://www.dillards.com/registry/"><img alt="store image" src="img/dillards.png" class="fade"/></a>
 		</div>
 
 		<div class="large-3 columns store text-center">
-			<img alt="store image" src="img/surlatable.png" class="fade"/>
+			<a href="http://www.surlatable.com/registry/giftRegistryHome.jsp"><img alt="store image" src="img/surlatable.png" class="fade"/></a>
 		</div>
 
 	</div>
@@ -225,7 +233,7 @@
 		<div class="large-4 columns">
 			<div class="work-item" data-project-id="project-1">
 				<div class="work-img-holder">
-					<img alt="Work Image" src="http://placehold.it/300x300" />
+					<img alt="Work Image" src="img/photo_1.jpg" />
 				</div>
 			</div>
 		</div>
@@ -233,7 +241,7 @@
 			<div class="large-4 columns">
 			<div class="work-item" data-project-id="project-1">
 				<div class="work-img-holder">
-					<img alt="Work Image" src="http://placehold.it/300x300" />
+					<img alt="Work Image" src="img/photo_4.jpg" />
 				</div>
 			</div>
 		</div>
@@ -241,7 +249,7 @@
 			<div class="large-4 columns">
 			<div class="work-item" data-project-id="project-1">
 				<div class="work-img-holder">
-					<img alt="Work Image" src="http://placehold.it/300x300" />
+					<img alt="Work Image" src="img/photo_3.jpg" />
 				</div>
 			</div>
 		</div>
@@ -253,7 +261,7 @@
 			<div class="large-4 columns">
 			<div class="work-item" data-project-id="project-1">
 				<div class="work-img-holder">
-					<img alt="Work Image" src="http://placehold.it/300x300" />
+					<img alt="Work Image" src="img/photo_5.jpg" />
 				</div>
 			</div>
 		</div>
@@ -261,7 +269,7 @@
 			<div class="large-4 columns">
 			<div class="work-item" data-project-id="project-1">
 				<div class="work-img-holder">
-					<img alt="Work Image" src="http://placehold.it/300x300" />
+					<img alt="Work Image" src="img/photo_6.jpg" />
 				</div>
 			</div>
 		</div>
@@ -269,7 +277,7 @@
 			<div class="large-4 columns">
 			<div class="work-item" data-project-id="project-1">
 				<div class="work-img-holder">
-					<img alt="Work Image" src="http://placehold.it/300x300" />
+					<img alt="Work Image" src="img/photo_7.jpg" />
 				</div>
 			</div>
 		</div>
