--- a/index.html
+++ b/index.html
@@ -308,13 +308,11 @@
 		<div class="row">
 			<div class="large-5 columns">
 				<p style="color:#ffffff;">
-					At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores.
+					Thanks for stopping by and checking out our site. We're extremely excited for the things to come and look forward to sharing this day with our loved ones. Feel free to use the form to contact us directly. Thanks!
 				</p>
 				<ul id="contact-details">
-					<li><i class="typcn typcn-phone">&nbsp;</i>+61 4835 298</li>
-					<li><i class="typcn typcn-mail">&nbsp;</i>hello@barossa.net</li>
-					<li><i class="typcn typcn-location-outline">&nbsp;</i>200 Collins St. Melbourne</li>
-					<li><i class="typcn typcn-social-twitter">&nbsp;</i>@craig800</li>
+					<li><i class="typcn typcn-mail">&nbsp;</i>ourpromisemade@gmail.com</li>
+					<li><i class="typcn typcn-location-outline">&nbsp;</i>Plano, TX</li>
 				</ul>
 			</div>
 
