--- a/index.html
+++ b/index.html
@@ -173,19 +173,92 @@
 		</div>
 	</div>
 
-	<div class="row">
-		<div class="large-12 columns">
-				<b><div class="box">WHEN &amp; WHERE</div></b><br><br>
+	<div class="row services-row">
+		<div class="large-4 columns">
+			<div class="service text-center">
+				<i class="typcn typcn-calender-outline"></i>
+				<h5>WHEN &amp; WHERE</h5>
+				<div class="hr large-3 small-3"></div>
 				<p>
-				April 19, 2014<br>
-				<a href="https://maps.google.com/maps?ie=UTF-8&q=gleneagles+country+club&fb=1&gl=us&hq=gleneagles+country+club&hnear=0x864c21da13c59513:0x62aa036489cd602b,Plano,+TX&cid=0,0,7775291139324462185&ei=7-t-UuiZIMiorAH9oICQCA&ved=0CDUQrwswAA" target="_blank">Glen Eagles Country Club</a><br>
-				5401 W Park Blvd<br>
-				Plano, TX 75093
-
-			</p>
+					<strong>April 19, 2014</strong><br>
+					Gleneagles Country Club<br>
+					<a href="https://www.google.com/maps/preview#!data=!1m4!1m3!1d3393!2d-96.809303!3d33.029017!4m12!2m11!1m10!1s0x0%3A0x6be7621890ad4469!3m8!1m3!1d214587!2d-96.7315424!3d32.8206645!3m2!1i1024!2i768!4f13.1" target="_blank">5401 W Park Blvd<br>
+					Plano, TX 75093</a>
+				</p>
+			</div>
 		</div>
 
+		<div class="large-4 columns">
+			<div class="service text-center">
+				<i class="typcn typcn-location-outline"></i>
+				<h5>CEREMONY &amp; RECEPTION</h5>
+				<div class="hr large-3 small-3"></div>
+				<p>
+					The ceremony will begin promptly at 5 PM and will last about 30 minutes. A cocktail hour will follow before the reception at 6:30 PM. A formal invitation with all this info will be sent out in the coming months.
+				</p>
+			</div>
+		</div>
 
+		<div class="large-4 columns">
+			<div class="service text-center">
+				<i class="typcn typcn-home-outline"></i>
+				<h5>ACCOMMODATIONS</h5>
+				<div class="hr large-3 small-3"></div>
+				<p>
+					<strong>Aloft Plano</strong><br>
+					<a href="https://www.google.com/maps/preview#!data=!4m12!2m11!1m10!1s0x0%3A0x35eecb8785e275d0!3m8!1m3!1d214587!2d-96.7315424!3d32.8206645!3m2!1i1024!2i768!4f13.1" target="_blank">6853 Dallas Pkwy<br>
+					Plano, TX 75024<br></a>
+					The nightly rate at Aloft starts at $179 with a two night minimum. When you book a room, make sure to reference our Group Code – <strong>MLW</strong> to receive a reduced rate.
+				</p>
+			</div>
+		</div>
+
+	</div>
+
+	<div class="row services-row">
+		<div class="large-4 columns">
+			<div class="service text-center">
+				<i class="typcn typcn-beer"></i>
+				<h5>GROOMSMEN</h5>
+				<div class="hr large-3 small-3"></div>
+				<p>
+					Sammy Palacios <strong>(Best Man)</strong><br>
+					Eric Rubio<br>
+					Josh Castillo<br>
+					Cruz Villareal<br>
+				</p>
+			</div>
+		</div>
+
+		<div class="large-4 columns">
+			<div class="service text-center">
+				<i class="typcn typcn-leaf"></i>
+				<h5>BRIDESMAIDS</h5>
+				<div class="hr large-3 small-3"></div>
+				<p>
+					Jenn Johnson <strong>(Maid of Honor)</strong><br>
+					Jenna Martin<br>
+					Lauren Johnson<br>
+					Lauren Anderson<br>
+					Taylor Anderson<br>
+					Megan Stake<br>
+
+				</p>
+			</div>
+		</div>
+
+		<div class="large-4 columns">
+			<div class="service text-center">
+				<i class="typcn typcn-gift"></i>
+				<h5>HONEYMOON</h5>
+				<div class="hr large-3 small-3"></div>
+				<p>
+					We're planning a fall tour of New England.<br>
+					If you feel so inclined, feel free to give to our honeymoon fund by clicking on the PayPal link below.<br><br>
+					<img src="img/paypal-button.png">
+				</p>
+			</div>
+		</div>
 
 	</div>
 
@@ -201,19 +274,19 @@
 
 	<div class="row">
 		<div class="large-3 columns store text-center">
-			<a href="http://www.target.com/registry/wedding/WM7IR6WX0KCK"><img alt="store image" src="img/target.png" class="fade"/></a>
+			<a href="http://www.target.com/registry/wedding/WM7IR6WX0KCK" target="_blank"><img alt="store image" src="img/target.png" class="fade"/></a>
 		</div>
 
 		<div class="large-3 columns store text-center">
-			<a href="http://www.crateandbarrel.com/gift-registry/"><img alt="store image" src="img/c&b.png" class="fade"/></a>
+			<a href="http://www.crateandbarrel.com/gift-registry/" target="_blank"><img alt="store image" src="img/c&b.png" class="fade"/></a>
 		</div>
 
 		<div class="large-3 columns store text-center">
-			<a href="https://www.dillards.com/registry/"><img alt="store image" src="img/dillards.png" class="fade"/></a>
+			<a href="https://www.dillards.com/registry/" target="_blank"><img alt="store image" src="img/dillards.png" class="fade"/></a>
 		</div>
 
 		<div class="large-3 columns store text-center">
-			<a href="http://www.surlatable.com/registry/giftRegistryHome.jsp"><img alt="store image" src="img/surlatable.png" class="fade"/></a>
+			<a href="http://www.surlatable.com/registry/giftRegistryHome.jsp" target="_blank"><img alt="store image" src="img/surlatable.png" class="fade"/></a>
 		</div>
 
 	</div>
