--- a/index.html
+++ b/index.html
@@ -152,11 +152,12 @@
 </section>
 
 <section id="quote-divider">
+	<div id="quote"
 	<div class="row">
 		<div class="large-8 large-centered columns">
 			<h2 class="text-white">A promise made,<br>is a promise kept</h2>
 			<div class="thick-hr large-3"></div>
-
+</div>
 		</div>
 	</div>
 </section>
@@ -265,6 +266,7 @@
 </section>
 
 <section id="registry">
+	<div id="registry">
 	<div class="row">
 		<div class="large-12 columns text-center">
 			<h3 class="text-white">WE'RE REGISTERED AT</h3>
@@ -289,6 +291,7 @@
 			<a href="http://www.surlatable.com/registry/giftRegistryHome.jsp" target="_blank"><img alt="store image" src="img/surlatable.png" class="fade"/></a>
 		</div>
 
+	</div>
 	</div>
 
 </section>
