--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<div class="large-4 columns">
 			<ul class="navigation hide-for-small">
 				<li><a class="scroll" href="#photos-nav">PHOTOS</a></li>
-				<li><a class="scroll" href="#contact-nav">RSVP</a></li>
+				<li><a class="scroll" href="#contact-nav">CONTACT</a></li>
 			</ul>
 		</div>
 
@@ -51,7 +51,7 @@
 				<li><a class="scroll" href="#story-nav">OUR STORY</a></li>
 				<li><a class="scroll" href="#info-nav">INFORMATION</a></li>
 				<li><a class="scroll" href="#photos-nav">PHOTOS</a></li>
-				<li><a class="scroll" href="#contact-nav">RSVP</a></li>
+				<li><a class="scroll" href="#contact-nav">CONTACT</a></li>
 			</ul>
 		</div>
 	</div>
@@ -69,7 +69,6 @@
 		<div class="large-12 columns text-center">
 			<div class="page-header pad-bottom">
 
-<!--<i class="typcn typcn-leaf">&nbsp;</i>-->
 
 				<h1>OUR STORY</h1>
 				<div class="hr large-1 small-3"></div>
@@ -104,7 +103,8 @@
 			<div class="team-member">
 				<div class="team-img-wrapper">
 					<div class="team-img-holder">
-						<img alt="Team Image" src="img/texas.jpg" />
+						<img class="lrg" src="img/texas.jpg" />
+						<img class="mobile" src="img/texas-mobile.jpg">
 					</div>
 				</div>
 
@@ -375,42 +375,23 @@
 		<div class="row">
 			<div class="large-12 columns text-center">
 				<div class="page-header pad-bottom">
-						<h1 style="color:#ffffff;">RSVP</h1>
+						<h1 style="color:#ffffff;">CONTACT</h1>
 					<div class="hr large-1 small-3"></div>
 				</div>
 			</div>
 		</div>
 
 		<div class="row">
-			<div class="large-5 columns">
+			<div class="large-12 columns text-center">
 				<p style="color:#ffffff;">
-					Thanks for stopping by and checking out our site. We're extremely excited for the things to come and look forward to sharing this day with our loved ones. Feel free to use the form to contact us directly. Thanks!
+					Thanks for stopping by and checking out our site. We're extremely excited for the things to come and look forward to sharing this day with our loved ones. Feel free to use the form to contact us directly. Thanks!<br><br>
+
+					<i class="typcn typcn-mail">&nbsp;</i>ourpromisemade@gmail.com<br>
+					<i class="typcn typcn-location-outline">&nbsp;</i>Plano, TX
 				</p>
-				<ul id="contact-details">
-					<li><i class="typcn typcn-mail">&nbsp;</i>ourpromisemade@gmail.com</li>
-					<li><i class="typcn typcn-location-outline">&nbsp;</i>Plano, TX</li>
-				</ul>
+
 			</div>
 
-			<div class="large-7 columns">
-				<div id="contact-form">
-					<div id="name">
-						<input id="form-name" type="text" placeholder="Name" />
-					</div>
-
-					<div id="email">
-						<input id="form-email" type="text" placeholder="Email" />
-					</div>
-
-					<div id="message">
-						<textarea id="form-message" placeholder="Message"></textarea>
-					</div>
-					<div id="details-error" class="text-white"><i class="typcn typcn-warning">&nbsp;</i>Error: Please ensure all fields are completed correctly</div>
-					<div id="form-sent" class="text-white"><i class="typcn typcn-thumbs-up">&nbsp;</i>Thank you, your message has been sent!</div>
-					<div class="btn-wrapper"><div class="btn">SEND<i class="typcn typcn-arrow-right"></i></div></div>
-				</div>
-			</div>
-		</div>
 
 		<div class="row">
 			<div class="large-12 columns text-center">
