better responsive changes

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			<div class="team-member">
 				<div class="team-img-wrapper">
 					<div class="team-img-holder">
-						<img class="lrg" src="img/texas.jpg" />
+						<img src="img/texas.jpg" />
 						<img class="mobile" src="img/texas-mobile.jpg">
 					</div>
 				</div>
