--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 				<h5>CEREMONY &amp; RECEPTION</h5>
 				<div class="hr large-3 small-3"></div>
 				<p>
-					The ceremony will begin promptly at 5 PM and will last about 30 minutes. A cocktail hour will follow before the reception at 6:30 PM. A formal invitation with all this info will be sent out in the coming months.
+					The ceremony will begin at 5 PM with reception to follow.
 				</p>
 			</div>
 		</div>
