--- a/index.html
+++ b/index.html
@@ -12,9 +12,19 @@
   <link rel="stylesheet" href="css/flexslider.css">
   <link rel="stylesheet" href="css/typicons.min.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/responsive.css">
-  <!--<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Petrona' rel='stylesheet' type='text/css'>-->
+
+<!-- jQuery -->
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+
+<!-- Make IE8 and below responsive by adding CSS3 MediaQuery support -->
+<!--[if lt IE 9]>
+  <script type="text/javascript" src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
+<![endif]-->
+
+<!-- Fresco -->
+<script type="text/javascript" src="js/fresco.js"></script>
+<link rel="stylesheet" type="text/css" href="css/fresco.css"/>
+
 
   <link href='http://fonts.googleapis.com/css?family=Montserrat:700|Varela+Round' rel='stylesheet' type='text/css'>
 
@@ -104,7 +114,6 @@
 				<div class="team-img-wrapper">
 					<div class="team-img-holder">
 						<img src="img/texas.jpg" />
-						<img class="mobile" src="img/texas-mobile.jpg">
 					</div>
 				</div>
 
@@ -208,8 +217,11 @@
 				<p>
 					<strong>Aloft Plano</strong><br>
 					<a href="https://www.google.com/maps/preview#!data=!4m12!2m11!1m10!1s0x0%3A0x35eecb8785e275d0!3m8!1m3!1d214587!2d-96.7315424!3d32.8206645!3m2!1i1024!2i768!4f13.1" target="_blank">6853 Dallas Pkwy<br>
-					Plano, TX 75024<br></a>
-					The nightly rate at Aloft starts at $179 with a two night minimum. When you book a room, make sure to reference our Group Code – <strong>MLW</strong> to receive a reduced rate.
+					Plano, TX 75024</a><br><br>
+					<strong>Hyatt Plano</strong><br>
+					<a href="https://www.google.com/maps/preview#!q=3100+Dallas+Pkwy%2C+Plano%2C+TX&data=!4m15!2m14!1m13!1s0x864c23645d1c8765%3A0x2329aaa1b23879d!3m8!1m3!1d3392!2d-96.8281898!3d33.0420025!3m2!1i1440!2i779!4f13.1!4m2!3d33.0420025!4d-96.8281898" target="_blank">3100 Dallas Pkwy<br>
+					Plano, TX 75093</a><br><br>
+
 				</p>
 			</div>
 		</div>
@@ -238,10 +250,10 @@
 				<div class="hr large-3 small-3"></div>
 				<p>
 					Jenn Johnson <strong>(Maid of Honor)</strong><br>
-					Jenna Martin<br>
-					Lauren Johnson<br>
 					Lauren Anderson<br>
 					Taylor Anderson<br>
+					Lauren Johnson<br>
+					Jenna Martin<br>
 					Megan Stake<br>
 
 				</p>
@@ -254,8 +266,8 @@
 				<h5>HONEYMOON</h5>
 				<div class="hr large-3 small-3"></div>
 				<p>
-					We're planning a fall tour of New England.<br>
-					If you feel so inclined, feel free to give to our honeymoon fund by clicking on the PayPal link below.<br><br>
+					We're planning a fall tour of New England.
+					If you would like to donate to our honeymoon fund in lieu of a wedding gift, please click on the PayPal link below.<br><br>
 					<img src="img/paypal-button.png">
 				</p>
 			</div>
@@ -313,7 +325,8 @@
 		<div class="large-4 columns">
 			<div class="work-item" data-project-id="project-1">
 				<div class="work-img-holder">
-					<img alt="Work Image" src="img/photo_1.jpg" />
+				<a href="img/photos/photo-1.jpg" class="fresco"><img src="img/thumbnails/thumbnail-1.jpg"</a>
+
 				</div>
 			</div>
 		</div>
@@ -321,7 +334,7 @@
 			<div class="large-4 columns">
 			<div class="work-item" data-project-id="project-1">
 				<div class="work-img-holder">
-					<img alt="Work Image" src="img/photo_4.jpg" />
+					<a href="img/photos/photo-2.jpg" class="fresco"><img src="img/thumbnails/thumbnail-2.jpg"</a>
 				</div>
 			</div>
 		</div>
@@ -329,7 +342,7 @@
 			<div class="large-4 columns">
 			<div class="work-item" data-project-id="project-1">
 				<div class="work-img-holder">
-					<img alt="Work Image" src="img/photo_3.jpg" />
+					<a href="img/photos/photo-3.jpg" class="fresco"><img src="img/thumbnails/thumbnail-3.jpg"</a>
 				</div>
 			</div>
 		</div>
@@ -341,7 +354,7 @@
 			<div class="large-4 columns">
 			<div class="work-item" data-project-id="project-1">
 				<div class="work-img-holder">
-					<img alt="Work Image" src="img/photo_5.jpg" />
+					<a href="img/photos/photo-4.jpg" class="fresco"><img src="img/thumbnails/thumbnail-4.jpg"</a>
 				</div>
 			</div>
 		</div>
@@ -349,7 +362,7 @@
 			<div class="large-4 columns">
 			<div class="work-item" data-project-id="project-1">
 				<div class="work-img-holder">
-					<img alt="Work Image" src="img/photo_6.jpg" />
+					<a href="img/photos/photo-5.jpg" class="fresco"><img src="img/thumbnails/thumbnail-5.jpg"</a>
 				</div>
 			</div>
 		</div>
@@ -357,7 +370,35 @@
 			<div class="large-4 columns">
 			<div class="work-item" data-project-id="project-1">
 				<div class="work-img-holder">
-					<img alt="Work Image" src="img/photo_7.jpg" />
+					<a href="img/photos/photo-6.jpg" class="fresco"><img src="img/thumbnails/thumbnail-6.jpg"</a>
+				</div>
+			</div>
+		</div>
+
+	</div>
+
+	<div class="row work-row">
+
+			<div class="large-4 columns">
+			<div class="work-item" data-project-id="project-1">
+				<div class="work-img-holder">
+					<a href="img/photos/photo-7.jpg" class="fresco"><img src="img/thumbnails/thumbnail-7.jpg"</a>
+				</div>
+			</div>
+		</div>
+
+			<div class="large-4 columns">
+			<div class="work-item" data-project-id="project-1">
+				<div class="work-img-holder">
+					<a href="img/photos/photo-8.jpg" class="fresco"><img src="img/thumbnails/thumbnail-8.jpg"</a>
+				</div>
+			</div>
+		</div>
+
+			<div class="large-4 columns">
+			<div class="work-item" data-project-id="project-1">
+				<div class="work-img-holder">
+					<a href="img/photos/photo-9.jpg" class="fresco"><img src="img/thumbnails/thumbnail-9.jpg"</a>
 				</div>
 			</div>
 		</div>
@@ -384,10 +425,11 @@
 		<div class="row">
 			<div class="large-12 columns text-center">
 				<p style="color:#ffffff;">
-					Thanks for stopping by and checking out our site. We're extremely excited for the things to come and look forward to sharing this day with our loved ones. Feel free to use the form to contact us directly. Thanks!<br><br>
+					We're extremely excited for the things to come and look forward to sharing this day with our loved ones. <br>We can't wait to see you all in April. If you have any questions, feel free to contact us at the email below.<br><br>
 
-					<i class="typcn typcn-mail">&nbsp;</i>ourpromisemade@gmail.com<br>
-					<i class="typcn typcn-location-outline">&nbsp;</i>Plano, TX
+					<i class="typcn typcn-mail">&nbsp;</i><a class="email" href="mailto:ourpromisemade@gmail.com">ourpromisemade@gmail.com</a><br>
+					<i class="typcn typcn-calender"></i>&nbsp;April 19, 2014<br>
+					<i class="typcn typcn-location">&nbsp;</i>Plano, TX
 				</p>
 
 			</div>
