--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="css/flexslider.css">
   <link rel="stylesheet" href="css/typicons.min.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/responsive.css">
 
 <!-- jQuery -->
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
