--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 		<div class="large-4 columns">
 			<div class="work-item" data-project-id="project-1">
 				<div class="work-img-holder">
-				<a href="img/photos/photo-1.jpg" class="fresco"><img src="img/thumbnails/thumbnail-1.jpg"</a>
+				<a href="img/photos/photo-1.jpg" class="fresco"><img src="img/thumbnails/thumbnail-1.jpg"></a>
 
 				</div>
 			</div>
@@ -326,7 +326,7 @@
 			<div class="large-4 columns">
 			<div class="work-item" data-project-id="project-1">
 				<div class="work-img-holder">
-				<a href="img/photos/photo-2.jpg" class="fresco"><img src="img/thumbnails/thumbnail-2.jpg"</a>
+				<a href="img/photos/photo-2.jpg" class="fresco"><img src="img/thumbnails/thumbnail-2.jpg"></a>
 				</div>
 			</div>
 		</div>
@@ -334,35 +334,7 @@
 			<div class="large-4 columns">
 			<div class="work-item" data-project-id="project-1">
 				<div class="work-img-holder">
-				<a href="img/photos/photo-3.jpg" class="fresco"><img src="img/thumbnails/thumbnail-3.jpg"</a>
-				</div>
-			</div>
-		</div>
-
-	</div>
-
-	<div class="row work-row">
-
-			<div class="large-4 columns">
-			<div class="work-item" data-project-id="project-1">
-				<div class="work-img-holder">
-				<a href="img/photos/photo-4.jpg" class="fresco"><img src="img/thumbnails/thumbnail-4.jpg"</a>
-				</div>
-			</div>
-		</div>
-
-			<div class="large-4 columns">
-			<div class="work-item" data-project-id="project-1">
-				<div class="work-img-holder">
-				<a href="img/photos/photo-5.jpg" class="fresco"><img src="img/thumbnails/thumbnail-5.jpg"</a>
-				</div>
-			</div>
-		</div>
-
-			<div class="large-4 columns">
-			<div class="work-item" data-project-id="project-1">
-				<div class="work-img-holder">
-				<a href="img/photos/photo-6.jpg" class="fresco"><img src="img/thumbnails/thumbnail-6.jpg"</a>
+				<a href="img/photos/photo-3.jpg" class="fresco"><img src="img/thumbnails/thumbnail-3.jpg"></a>
 				</div>
 			</div>
 		</div>
@@ -374,7 +346,7 @@
 			<div class="large-4 columns">
 			<div class="work-item" data-project-id="project-1">
 				<div class="work-img-holder">
-				<a href="img/photos/photo-7.jpg" class="fresco"><img src="img/thumbnails/thumbnail-7.jpg"</a>
+				<a href="img/photos/photo-4.jpg" class="fresco"><img src="img/thumbnails/thumbnail-4.jpg"></a>
 				</div>
 			</div>
 		</div>
@@ -382,7 +354,7 @@
 			<div class="large-4 columns">
 			<div class="work-item" data-project-id="project-1">
 				<div class="work-img-holder">
-				<a href="img/photos/photo-8.jpg" class="fresco"><img src="img/thumbnails/thumbnail-8.jpg"</a>
+				<a href="img/photos/photo-5.jpg" class="fresco"><img src="img/thumbnails/thumbnail-5.jpg"></a>
 				</div>
 			</div>
 		</div>
@@ -390,7 +362,35 @@
 			<div class="large-4 columns">
 			<div class="work-item" data-project-id="project-1">
 				<div class="work-img-holder">
-				<a href="img/photos/photo-9.jpg" class="fresco"><img src="img/thumbnails/thumbnail-9.jpg"</a>
+				<a href="img/photos/photo-6.jpg" class="fresco"><img src="img/thumbnails/thumbnail-6.jpg"></a>
+				</div>
+			</div>
+		</div>
+
+	</div>
+
+	<div class="row work-row">
+
+			<div class="large-4 columns">
+			<div class="work-item" data-project-id="project-1">
+				<div class="work-img-holder">
+				<a href="img/photos/photo-7.jpg" class="fresco"><img src="img/thumbnails/thumbnail-7.jpg"></a>
+				</div>
+			</div>
+		</div>
+
+			<div class="large-4 columns">
+			<div class="work-item" data-project-id="project-1">
+				<div class="work-img-holder">
+				<a href="img/photos/photo-8.jpg" class="fresco"><img src="img/thumbnails/thumbnail-8.jpg"></a>
+				</div>
+			</div>
+		</div>
+
+			<div class="large-4 columns">
+			<div class="work-item" data-project-id="project-1">
+				<div class="work-img-holder">
+				<a href="img/photos/photo-9.jpg" class="fresco"><img src="img/thumbnails/thumbnail-9.jpg"></a>
 				</div>
 			</div>
 		</div>
