--- a/index.html
+++ b/index.html
@@ -209,10 +209,20 @@
 				<p>
 					<strong>Aloft Plano</strong><br>
 					<a href="https://www.google.com/maps/preview#!data=!4m12!2m11!1m10!1s0x0%3A0x35eecb8785e275d0!3m8!1m3!1d214587!2d-96.7315424!3d32.8206645!3m2!1i1024!2i768!4f13.1" target="_blank">6853 Dallas Pkwy<br>
-					Plano, TX 75024</a><br><br>
+					Plano, TX 75024</a><br>
+					-<br>
+					The nightly rate at the Aloft Plano starts at $89 per night. You can book one of two ways: Call<br>1-877-462-5638 and reference Smith-Johnson Wedding, or book online by clicking <a href="https://www.starwoodmeeting.com/Book/SmithJohnsonWedding" target="_blank">here</a>.
+
+					<br><br><br>
+
+
 					<strong>Hyatt Plano</strong><br>
 					<a href="https://www.google.com/maps/preview#!q=3100+Dallas+Pkwy%2C+Plano%2C+TX&data=!4m15!2m14!1m13!1s0x864c23645d1c8765%3A0x2329aaa1b23879d!3m8!1m3!1d3392!2d-96.8281898!3d33.0420025!3m2!1i1440!2i779!4f13.1!4m2!3d33.0420025!4d-96.8281898" target="_blank">3100 Dallas Pkwy<br>
-					Plano, TX 75093</a><br><br>
+					Plano, TX 75093</a><br>
+
+					-<br>
+
+					The nightly rate at the Hyatt Plano starts at $78 per night. You can book one of two ways: Call<br>972-378-3997 and reference Smith-Johnson Wedding, or book online by going to <a href="http://www.dallasplano.place.hyatt.com" target="_blank">dallasplano.place.hyatt.com</a> clicking on the <strong>special rates</strong> link, and entering the group code<br><strong>G-SMJO</strong>.
 
 				</p>
 			</div>
