--- a/index.html
+++ b/index.html
@@ -15,7 +15,18 @@
   <link rel="stylesheet" href="css/responsive.css">
 
 
-<link rel="stylesheet" type="text/css" href="css/fresco.css"/>
+<link rel="stylesheet" href="css/nivo-lightbox.css" type="text/css" />
+<link rel="stylesheet" href="css/default.css" type="text/css" />
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="js/nivo-lightbox.min.js"></script>
+
+<script>
+$(document).ready(function(){
+    $('a').nivoLightbox();
+});
+</script>
+
+
 
 
   <link href='http://fonts.googleapis.com/css?family=Montserrat:700|Varela+Round' rel='stylesheet' type='text/css'>
@@ -337,7 +348,11 @@
 		<div class="large-4 columns">
 			<div class="work-item" data-project-id="project-1">
 				<div class="work-img-holder">
-				<a href="img/photos/photo-1.jpg" class="fresco"><img src="img/thumbnails/thumbnail-1.jpg"></a>
+
+						<a href="img/photos/photo-1.jpg" data-lightbox-type="ajax">
+					<img alt="" src="img/thumbnails/thumbnail-1.jpg" /></a>
+
+
 
 				</div>
 			</div>
